# tapecheck

./: .gitignore  LICENSE.md  README.md  dune  dune-project
bench_intercept/: bench_intercept.ml  dune  sr_nohook.ml  sr_nohook.mli
blog/: draft-choice-tapes.md  draft-mode-checker-reviewer.md
blog/materials/: domain-spawn-alert.txt  mode-error-before.txt  parallel-bench-oxcaml.txt  parallel-bench-stock.txt
demo/: bench_realign.ml  dune  shrink_table.ml
design/: afl-integration.md  choice-tape-for-base-quickcheck.md  draft-reply-ceastlund.md  hyp_fn_quality.py  hypothesis-comparison.md  intercept-overhead-results.txt  realign-bench-results.txt  review-findings-2026-07-12.md  shrink-table-results.txt  stream-keyed-tapes.md  upstream-pr-splittable-random.md
engine/: dune  tape_engine.ml  tape_test.ml
ox_demo/: bench.ml  bench_parallel.ml  dune
ox_demo/modes_probe/: dune  modes_probe.ml
probe/: dune  probe.ml
tape/: dune  tape.ml
test/: dune  test_tape.ml
test_bq/: dune  test_fn_shrink.ml  test_roundtrip.ml  test_shrink.ml  test_wrapper.ml
