; The OxCaml showcase entry points: no ppx derivers (the OxCaml ppxlib
; fork has a divergent parsetree), hand-written generators only. Build
; under both switches so the same source can be timed on each.
(executables
 (names bench bench_parallel)
 (libraries base stdio unix base_quickcheck splittable_random tape tape_engine))
